tests/res/traits/error_obj_init.say
// `init` is not a callable member on a constructed instance.
type T {
    pub v;
    init(v) { this.v = v; }
}
say t = T(5);
print(t.v); // expect: 5
t.init(9); // error: Invalid index: T doesn't have member "init" and doesn't have a getter
